--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ JWT_TOKEN_SECRET = "test2022'managementsystembyharissa"
 
 DB_CONNECTION = "mongodb+srv://admin:admin_12312@cluster0.0mfbikg.mongodb.net/test"
 
-// PORT = 3001
+# PORT = 3001
 
 TOKEN_EXPIRATION= 7d
 
