--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 JWT_TOKEN_SECRET = "test2022'managementsystembyharissa"
 
-DB_CONNECTION = "mongodb+srv://admin:admin_12312@cluster0.0mfbikg.mongodb.net/test"
+DB_CONNECTION = "mongodb+srv://admin:admin@cluster0.9osbucm.mongodb.net/test"
 
-# PORT = 3001
+PORT = 3001
 
 TOKEN_EXPIRATION= 7d
 
