--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ PORT = 3001
 
 TOKEN_EXPIRATION= 7d
 
-EMAIL = ahmadharissa620@gmail.com
-PASSWORD = ocahdiojahkigdpy
+EMAIL = ahmadharissa25@gmail.com
+PASSWORD = ukkkguvygeiscelj
 
 DOMAIN=http://localhost:3001
 
