--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 JWT_TOKEN_SECRET = "test2022'managementsystembyharissa"
 
-DB_CONNECTION = "mongodb+srv://admin:admin@cluster0.9osbucm.mongodb.net/test"
+DB_CONNECTION = "mongodb+srv://admin:admin@cluster0.nh2lonn.mongodb.net/test"
 
 PORT = 3001
 
 TOKEN_EXPIRATION= 7d
 
 EMAIL = ahmadharissa25@gmail.com
-PASSWORD = ukkkguvygeiscelj
+PASSWORD = lotpnoufhnujwelr
 
 DOMAIN=http://localhost:3001
 
