--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --experimental-specifier-resolution=node index"
+    "start": "node --experimental-specifier-resolution=node index",
+    "dev": "nodemon --experimental-specifier-resolution=node index"
   },
   "author": "ahmadkharissa",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "stripe": "^12.9.0"
   }
 }
