--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ PORT = 3001
 TOKEN_EXPIRATION= 7d
 
 EMAIL = ahmadharissa25@gmail.com
-PASSWORD = lotpnoufhnujwelr
+PASSWORD = vluwexdxvgeudsdh
 
 DOMAIN=http://localhost:3001
 
